# Gliese

./: .env.tauri  .gitignore  .prettierignore  CLAUDE.md  README.md  index.html  package.json  playwright.config.ts  sundrop-village-deterministic-layout-plan.md  svelte.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.agents/skills/gliese-story-writer/: SKILL.md
.claude/skills/: gliese-story-writer
.codex/scripts/: validate_skill.py
.codex/skills/2d-game-asset-workflow/: SKILL.md
.github/workflows/: ci.yml
docs/: entry-map-exploration-enrichment-plan-reviewed.md  entry-map-followup-improvement-plan.md  entry-map-hard-blockout-rework-plan.md
docs/plans/: 2026-04-27-phaser-jrpg-vertical-slice.md  2026-05-29-rust-story-pipeline.md
docs/stories/: high_level_plan.md
docs/superpowers/plans/: 2026-05-02-actor-animations.md  2026-05-02-item-system.md  2026-05-02-large-room-tilemap-camera.md  2026-05-03-village-interiors-npcs.md  2026-05-19-area-map.md  (+37 more)
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/story/: beat.rs  check.rs  codegen.rs  commands.rs  compiler.rs  generated.rs  manifest.rs  mod.rs  reference.rs  types.rs
src/routes/: +page.svelte
story/: manifest.yaml
story/examples/: dialogue-beat.md
story/reports/: story-integration-report.md
story/schema/: directives.md
tests/e2e/: game.e2e.ts
tools/: assert-no-frontend-story-prose.ts  generate_environment_dressing.py  preview-layered-region.ts
(+183 files in other folders)
